--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "animais",
   "version": "1.0.0",
-  "main": "script.js",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
@@ -13,8 +13,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mercadopago": "^2.8.0",
-    "chrome-aws-lambda": "^10.1.0",
-    "puppeteer-core": "^10.1.0"
+    "mercadopago": "^2.8.0"
   }
 }
